# blackurator

./: LICENSE  README.md
back/: main.py  pyproject.toml
front/: package-lock.json
