[tool.poetry]
name = "back"
version = "0.1.0"
description = "Backend for Blackurator"
authors = ["meliodas0n <mrunalnarayana@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
diffusers = {extras = ["torch"], version = "^0.30.3"}
transformers = "^4.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
